# arel

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
ci/: azure-pipelines.yml
example/: README.md  app.py  requirements.txt
example/pages/: README.md  page1.md  page2.md  page3.md
example/scripts/: install  serve
example/server/: app.py  content.py  events.py  main.py  resources.py  routes.py  settings.py
example/server/templates/: index.jinja
scripts/: check  clean  install  lint  publish  serve
src/arel/: __init__.py  _app.py  _endpoints.py  _main.py  _middleware.py  _models.py  _notify.py  _types.py  _watch.py
src/arel/data/: client.js
tests/: common.py  conftest.py  test_deprecations.py  test_example.py  test_middleware.py  test_package.py  utils.py
